fix(footer): fix copyright text alignment

--- a/templates/consonant/blocks/footer/footer.css
+++ b/templates/consonant/blocks/footer/footer.css
@@ -112,6 +112,7 @@ footer > div.footer-copyright {
     font-size: 14px;
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
     padding: 32px 0px;
     border-top: 1px solid #DEDEDE;
